--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <header>
     <div class="wrapper">
-      <img class="qrimg" src="./images/image-qr-code.png" alt="">
+      <img class="qrimg" src=".images/image-qr-code.png" alt="">
       
       <h1>Improve your front-end<br> skills by building projects</h1>
       <p>Scan the qr code to visit Frontend Mentor and take your coding skills to the next level</p>
